--- a/vignettes/Example_uncertainty_sensitivity.Rmd
+++ b/vignettes/Example_uncertainty_sensitivity.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Example uncertainty and sensitivity"
+title: "Computing uncertainty and sensitivity"
 output: rmarkdown::html_vignette
 bibliography: references.bib # Point to my .bib file
 vignette: >
